

syntax = "proto3";


package post;
option go_package = "github.com/chibao13/news_feed_practice/api/v1/post";


service PostRPC{
  rpc CreatePost(CreatePostRequest) returns(PostResponse){}
  //rpc Authentication(UserIdRequest) returns (FindUserResponse){}
}

message CreatePostRequest{
  uint32 userId = 1;
  string  content = 2;
}

message PostResponse{
  uint32 postId = 1;
}

